--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <option value="Show">Show Path</option>
         <option value="Guess">Guess Path</option>
     </select>-->
-    <p style="color:white">Random ShortstPath Visualization By Matew</p>
+    <p style="color:white">Net Shortst-Path-Visualization By Matew</p>
     <!------------------------------ Controls Section ---------------------------------->
     <div id="gameMode_controls">
         <label for="nodes">Cant.Nodes</label>
