--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <!--<link rel="stylesheet" type="text/css" href="styles.css">-->
     <title>Document</title>
 </head>
 <body style="background-color:#1a1a1a">
@@ -27,8 +27,8 @@
     </div>
 </body>
 
-<script type="module" src="app.js"></script>
-<script src="lib/fabric.min.js"></script>
-<script src="lib/graph_base.js"></script>
-<script src="lib/pQueue.js"></script>
+<script type="module" src="src/index.js"></script>
+<!--<script src="src/lib/fabric.min.js"></script>-->
+<!--<script src="src/lib/graph_base.js"></script>-->
+<!--<script src="src/lib/pQueue.js"></script>-->
 </html>
